Cleanup on Serials. Markup corrections and cleanup, moving script blocks into header, correcting previous incorrect changes to embedded scripts (translator-related stuff)
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -100,7 +100,7 @@ li {
     content: " ";
 }
 
-#title {
+#sitetitle {
 	background-image : url("../../img/koha-logo-black.png");
 	background-position : 5px 2px;
 	background-repeat : no-repeat;
@@ -109,12 +109,12 @@ li {
 	padding-left : 50px;
 }
 
-#title h1 {
+#sitetitle h1 {
 	display : inline;
 	line-height : 54px;
 }
 
-#title h1 a {
+#sitetitle h1 a {
 	text-decoration : none;
 }
 
