--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/distributedto.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/distributedto.tmpl
@@ -1,58 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Serials &rsaquo; Select Supplier</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
-<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
-
-<div id="doc3" class="yui-t2">
-   
-   <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
-
-	<h1>Select borrowers or enter manually the names</h1>
-	<p>
-		<form action="/cgi-bin/koha/serials/distributedto.pl" method="post" name="Aform">
-			<table>
-			<tr>
-			<td>
-				<input type="text" name="searchfield" value="<!-- TMPL_VAR name="searchfield" -->">
-				<input type="submit" class="button" value="Filter">
-			</td>
-			<td rowspan="2">
-				<h2>Distributed to</h2>
-				<p>
-					<textarea name="distributedto" rows="15" cols="30"><!-- TMPL_VAR name="distributedto" --></textarea>
-				</p>
-				<p>
-					<!-- TMPL_IF name="save" -->
-						saved</p>
-					<!-- /TMPL_IF -->
-					<input type="hidden" name="SaveList" value="0">
-					<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR name="subscriptionid" -->">
-					<input type="button" name="save" value="Save" class="button" onclick="FSaveList()">
-					<input type="button" name="clode" value="Close" class="button" onclick="window.close()">
-			</td>
-			</tr>
-			<tr>
-			<td>
-				<!-- TMPL_VAR NAME="borrowername" -->
-				<select name="borlist" size="15">
-					<!-- TMPL_LOOP name="borlist" -->
-						<option value="<!-- TMPL_VAR name="surname" --><!-- TMPL_VAR name="firstname" -->">
-							<!-- TMPL_VAR name="surname" --> <!-- TMPL_VAR name="firstname" -->
-						</option>
-					<!-- /TMPL_LOOP -->
-				</select>
-				<input type="button" name="insert" value="&gt;&gt;" class="button" onclick="insertValueQuery()" title="Insert" />
-			</td>
-			</tr>
-			</table>
-		</form>
-	</p>
-	<script language="javascript" type="text/javascript">
+<script language="javascript" type="text/javascript">
 		// GPL code coming from PhpMyAdmin
 		function insertValueQuery() {
 			var myQuery = document.Aform.distributedto;
@@ -93,6 +42,58 @@
 			document.Aform.submit();
 		}
 	</script>
+</head>
+<body>
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
+	<h1>Select borrowers or enter manually the names</h1>
+	<p>
+		<form action="/cgi-bin/koha/serials/distributedto.pl" method="post" name="Aform">
+			<table>
+			<tr>
+			<td>
+				<input type="text" name="searchfield" value="<!-- TMPL_VAR name="searchfield" -->" />
+				<input type="submit" class="button" value="Filter" />
+			</td>
+			<td rowspan="2">
+				<h2>Distributed to</h2>
+				<p>
+					<textarea name="distributedto" rows="15" cols="30"><!-- TMPL_VAR name="distributedto" --></textarea>
+				</p>
+				<p>
+					<!-- TMPL_IF name="save" -->
+						saved</p>
+					<!-- /TMPL_IF -->
+					<input type="hidden" name="SaveList" value="0" />
+					<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR name="subscriptionid" -->" />
+					<input type="button" name="save" value="Save" class="button" onclick="FSaveList()" />
+					<input type="button" name="clode" value="Close" class="button" onclick="window.close()" />
+			</td>
+			</tr>
+			<tr>
+			<td>
+				<!-- TMPL_VAR NAME="borrowername" -->
+				<select name="borlist" size="15">
+					<!-- TMPL_LOOP name="borlist" -->
+						<option value="<!-- TMPL_VAR name="surname" --><!-- TMPL_VAR name="firstname" -->">
+							<!-- TMPL_VAR name="surname" --> <!-- TMPL_VAR name="firstname" -->
+						</option>
+					<!-- /TMPL_LOOP -->
+				</select>
+				<input type="button" name="insert" value="&gt;&gt;" class="button" onclick="insertValueQuery()" title="Insert" />
+			</td>
+			</tr>
+			</table>
+		</form>
+	</p>
+	
 </div>
 </div>
 </div>
