--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/member-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/member-search.tmpl
@@ -1,9 +1,6 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Member Search &rsaquo; <!-- TMPL_VAR name="bookselname" --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-
 <script type="text/javascript">
 <!--
 
@@ -14,8 +11,16 @@ function add_member(subscriptionid,borrowernumber){
 
 //-->
 </script>
+<style type="text/css">
+   #custom-doc { width:38.46em;*width:37.53em;min-width:500px; margin:auto; text-align:left; }
+   </style>
+</head>
+<body>
 
-<div class="popup-block">
+<div id="custom-doc" class="yui-t7">
+   <div id="bd">
+	<div class="yui-g">
+
 <h1>Member Search</h1>
 
 <p>
@@ -28,13 +33,13 @@ function add_member(subscriptionid,borrowernumber){
 <!-- TMPL_IF NAME="memberloop" -->
 <div class="searchresults">
 <table cellspacing="0" cellpadding="0" border="0" width="480" class="collapse">
-<tr><th class="cell-header">Name</th>
-    <th class="cell-header">Location</th>
-    <th class="cell-header">Add</th></tr>
+<tr><th>Name</th>
+    <th>Location</th>
+    <th>Add</th></tr>
 <!-- TMPL_LOOP NAME="memberloop" -->
-<tr><td class="cell"><!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></td>
-    <td class="cell"><!-- TMPL_VAR NAME="streetaddress" --></td>
-    <td class="cell"><a onclick="add_member(<!-- TMPL_VAR
+<tr><td><!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></td>
+    <td><!-- TMPL_VAR NAME="streetaddress" --></td>
+    <td><a href="#" onclick="add_member(<!-- TMPL_VAR
 NAME="subscriptionid" -->,<!-- TMPL_VAR NAME="borrowernumber" -->); return false" href="/cgi-bin/koha/serials/routing.pl?subscriptionid=<!-- TMPL_VAR NAME="subscriptionid" -->&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;op=add">Add</a></td></tr>
 <!-- /TMPL_LOOP -->
         </table></td></tr>
@@ -45,8 +50,10 @@ NAME="subscriptionid" -->,<!-- TMPL_VAR NAME="borrowernumber" -->); return false
         <p>No results found</p>
     <!-- /TMPL_IF -->
 <!-- /TMPL_IF -->
-<br />
+
 <p><a href="javascript:window.close()" class="button">Close</a></p>
+
+</div>
 </div>
 
-<!-- TMPL_INCLUDE NAME="popup-bottom.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
