--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/routing-preview-slip.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/routing-preview-slip.tmpl
@@ -1,6 +1,17 @@
-<!-- TMPL_INCLUDE NAME="popup-top.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
+<title>Koha &rsaquo; Serials  &rsaquo; Routing Slip Preview</title>
+<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
-<div id="slip-block">
+<style type="text/css">
+   #custom-doc { width:38.46em;*width:37.53em;min-width:500px; margin:auto; text-align:left; }
+   </style>
+</head>
+<body>
+
+<div id="custom-doc" class="yui-t7">
+   <div id="bd">
+	<div class="yui-g">
+
 <table cellspacing="0" cellpadding="0" border="0" class="collapse routingslip">
 <tr><td class="cell" colspan="3"><h3><!-- TMPL_VAR NAME="libraryname" --></h3></td></tr>
 <tr><td class="cell" colspan="3"><b>Title:</b> <!-- TMPL_VAR NAME="title" --><br />
@@ -18,6 +29,8 @@ promptly as others are waiting.
    <div id="slip-block-links">
    <a class="button" href="javascript:window.print();self.close()">Print</a> &nbsp; <a class="button" href="javascript:self.close()">Close</a>
    </div>
-</div>
 
-<!-- TMPL_INCLUDE NAME="popup-bottom.inc" -->
+   </div>
+   </div>
+
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
