--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/routing-preview.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/routing-preview.tmpl
@@ -1,6 +1,16 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Serials</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<script type="text/javascript">
+<!--
+
+function print_slip(subscriptionid,issue){
+    var myurl = 'routing-preview.pl?ok=1&subscriptionid='+subscriptionid+'&issue='+issue;
+window.open(myurl,'PrintSlip','width=500,height=500,toolbar=no,scrollbars=yes');
+    window.location.href='serials-home.pl';
+}
+//-->
+</script>
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
@@ -20,16 +30,15 @@
 <p><b>Issue:</b> <!-- TMPL_VAR NAME="issue" --></p>
 
 <table border="0" cellspacing="0" cellpadding="0">
-<tr><td style="padding-top: 5px;"><b>List Member:</b>&nbsp;</td>
+<tr><td style="padding-top: 5px;"><b>List Member:</b></td>
     <td><table cellspacing="0" cellpadding="0" border="0" class="collapse">
-        <tr><td class="cell-header">Name</td>
-            <td class="cell-header">Location</td></tr>
+        <tr><th>Name</th>
+            <th>Location</th></tr>
 <!-- TMPL_LOOP NAME="memberloop" -->
-        <tr><td class="cell"><!-- TMPL_VAR NAME="name" --></td>
-            <td class="cell"><!-- TMPL_VAR NAME="location" --></td></tr>
+        <tr><td><!-- TMPL_VAR NAME="name" --></td>
+            <td><!-- TMPL_VAR NAME="location" --></td></tr>
 <!-- /TMPL_LOOP -->
         </table></td></tr>
-<tr><td colspan="2">&nbsp;</td></tr>
 <tr><td><b>Notes:</b></td>
     <td><!-- TMPL_VAR NAME="routingnotes" --></td></tr>
 </table>
@@ -39,16 +48,6 @@
 <input type="submit" name="delete" class="button" value="Delete" /></p>
 </form>
 
-<script type="text/javascript">
-<!--
-
-function print_slip(subscriptionid,issue){
-    var myurl = 'routing-preview.pl?ok=1&subscriptionid='+subscriptionid+'&issue='+issue;
-window.open(myurl,'PrintSlip','width=400,height=500,toolbar=no,scrollbars=yes');
-    window.location.href='serials-home.pl';
-}
-//-->
-</script>
 </div>
 </div>
 </div>
