--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-detail.tmpl
@@ -1,22 +1,13 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Serials Detail for Subscription #<!-- TMPL_VAR name="subscriptionid" --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
-<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
-
-<div id="doc3" class="yui-t2">
-   
-   <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
-
 <script type="text/javascript" language="javascript">
 <!--
+function _(s) { return s } // dummy function for gettext
+
 // the english words used in display purposes
-var text = new Array('Number','Volume','Issue','Month','Week','Starting with:','Rollover at:','Choose Hemisphere:','Northern','Southern',
-'Autumn','Winter','Spring','Summer','Fall','Season','Year');
+var text = new Array(_('Number'),_('Volume'),_('Issue'),_('Month'),_('Week'),_('Starting with:'),_('Rollover at:'),_('Choose Hemisphere:'),_('Northern'),_('Southern',
+'Autumn'),_('Winter'),_('Spring'),_('Summer'),_('Fall'),_('Season'),_('Year'));
 
 
 // to display the options section
@@ -38,7 +29,7 @@ function irregularity(){
     var periodicity = '<!-- TMPL_VAR NAME="periodicity"-->';
     switch(periodicity){
     case "1":
-        var names = new Array('Monday','Tuesday','Wednesday','Thursday','Friday','Saturday','Sunday');
+        var names = new Array(_('Monday'),_('Tuesday'),_('Wednesday'),_('Thursday'),_('Friday'),_('Saturday'),_('Sunday'));
         break;
     case "2":
         <!-- TMPL_IF NAME="weekarrayjs" -->
@@ -56,19 +47,19 @@ function irregularity(){
         <!-- /TMPL_IF -->
         break;
     case "5":
-        var names = new Array('January','February','March','April','May','June','July','August','September','October','November','December');
+        var names = new Array(_('January'),_('February'),_('March'),_('April'),_('May'),_('June'),_('July'),_('August'),_('September'),_('October'),_('November'),_('December'));
         break;
     case "6":
-        var names = new Array('January','February','March','April','May','June','July','August','September','October','November','December');
+        var names = new Array(_('January'),_('February'),_('March'),_('April'),_('May'),_('June'),_('July'),_('August'),_('September'),_('October'),_('November'),_('December'));
         break;
     case "7":
-        var names = new Array('January','February','March','April','May','June','July','August','September','October','November','December');
+        var names = new Array(_('January'),_('February'),_('March'),_('April'),_('May'),_('June'),_('July'),_('August'),_('September'),_('October'),_('November'),_('December'));
         break;
     case "8":
-        var names = new Array('Autumn','Winter','Spring','Summer','Fall');
+        var names = new Array(_('Autumn'),_('Winter'),_('Spring'),_('Summer'),_('Fall'));
         break;
     case "9":
-        var names = new Array('January','February','March','April','May','June','July','August','September','October','November','December');
+        var names = new Array(_('January'),_('February'),_('March'),_('April'),_('May'),_('June'),_('July'),_('August'),_('September'),_('October'),_('November'),_('December'));
         break;
     case "10":
         expected =1;
@@ -89,27 +80,49 @@ function irregularity(){
     <!-- /TMPL_IF -->
 }
 
+function confirm_deletion() {
+    var is_confirmed = confirm(_('Are you sure you want to delete this subscription?'));
+    if (is_confirmed) {
+        window.location="subscription-detail.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->&op=del";
+    }
+}
+function popup(subscriptionid) {
+    newin=window.open("subscription-renew.pl?mode=popup&subscriptionid="+subscriptionid,'popup','width=500,height=400,toolbar=false,scrollbars=yes');
+}
+
 -->
 </script>
+</head>
+<body>
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
+
     <h1>Subscription #<!--TMPL_VAR name="subscriptionid"--></h1>
     <!--TMPL_IF Name="abouttoexpire"--><div class="problem">Subscription is by its end. It should be renewed now.</div><!--/TMPL_IF-->
     <div id="action">
         <div class="edit">
-            <a href="subscription-add.pl?op=mod&amp;subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Edit</a>
-            <a href="subscription-add.pl?op=dup&amp;subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Duplicate </a>
-            <a href="#" onclick="popup(<!--TMPL_VAR Name="subscriptionid"-->)">Renew </a>
-            <a href="serials-edit.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->&amp;serstatus=1,3">Receive</a>
-            <a href="javascript:confirm_deletion()">
-                Delete
-            </a>
+<ul>
+	<li>            <a href="subscription-add.pl?op=mod&amp;subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Edit</a></li>
+	<li>            <a href="subscription-add.pl?op=dup&amp;subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Duplicate </a></li>
+	<li>            <a href="#" onclick="popup(<!--TMPL_VAR Name="subscriptionid"-->)">Renew </a></li>
+	<li>            <a href="serials-edit.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->&amp;serstatus=1,3">Receive</a></li>
+	<li>            <a href="javascript:confirm_deletion()">Delete</a></li>
+</ul>
         </div>
         <div class="view">
-            <a href="serials-collection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Serial Collection</a>
-            <!-- TMPL_IF NAME="routing" -->
-            <a href="routing.pl?subscriptionid=<!-- TMPL_VAR NAME="subscriptionid" -->">Edit Routing List</a>
-            <!-- TMPL_ELSE -->
-            <a href="routing.pl?subscriptionid=<!-- TMPL_VAR NAME="subscriptionid" -->&amp;op=new">Create Routing List</a>
+<ul>
+	<li>            <a href="serials-collection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Serial Collection</a></li>
+	            <!-- TMPL_IF NAME="routing" --><li><a href="routing.pl?subscriptionid=<!-- TMPL_VAR NAME="subscriptionid" -->">Edit Routing List</a></li><!-- TMPL_ELSE -->
+	<li>            <a href="routing.pl?subscriptionid=<!-- TMPL_VAR NAME="subscriptionid" -->&amp;op=new">Create Routing List</a></li>
             <!-- /TMPL_IF -->
+</ul>
         </div>
     </div>
     <div id="subscription_info">
@@ -358,20 +371,7 @@ function irregularity(){
                 <tr><td><label>Opac's note</label></td><td><!-- TMPL_VAR name="opacnote" --></td></tr>
         </table>
     </div>
-</div>
-<script type="text/javascript">
-function confirm_deletion() {
-    var is_confirmed = confirm(_('Are you sure you want to delete this subscription?'));
-    if (is_confirmed) {
-        window.location="subscription-detail.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->&op=del";
-    }
-}
-function popup(subscriptionid) {
-    newin=window.open("subscription-renew.pl?mode=popup&subscriptionid="+subscriptionid,'popup','width=500,height=400,toolbar=false,scrollbars=yes');
-}
 
-// window.onload = num_pattern();
-</script>
 </div>
 </div>
 </div>
